add avoidance area
